tests/spec/emit/snapshots/recover_block_basic.snap
---
source: tests/spec/emit/recover.rs
description: |
  
  fn may_panic() -> int { 42 }
  
  fn test() {
    let result = recover { may_panic() };
  }
---
package main

import lisette "github.com/ivov/lisette/prelude"

func mayPanic() int {
	return 42
}

func test() {
	recoverResult := lisette.RecoverBlock(func() int {
		return mayPanic()
	})
	_ = recoverResult
}
