tests/spec/emit/snapshots/recover_block_in_function_returning_result.snap
---
source: tests/spec/emit/recover.rs
description: |
  
  fn may_panic() -> int { 42 }
  
  fn test() -> Result<int, PanicValue> {
    recover { may_panic() }
  }
---
package main

import lisette "github.com/ivov/lisette/prelude"

func mayPanic() int {
	return 42
}

func test() lisette.Result[int, lisette.PanicValue] {
	recoverResult := lisette.RecoverBlock(func() int {
		return mayPanic()
	})
	return recoverResult
}
