tests/spec/emit/snapshots/recover_block_nested.snap
---
source: tests/spec/emit/recover.rs
description: |
  
  fn test() {
    let outer = recover {
      let inner = recover { 1 };
      2
    };
  }
---
package main

import lisette "github.com/ivov/lisette/prelude"

func test() {
	recoverResult := lisette.RecoverBlock(func() int {
		recoverResult_1 := lisette.RecoverBlock(func() int {
			return 1
		})
		_ = recoverResult_1
		return 2
	})
	_ = recoverResult
}
