tests/spec/emit/snapshots/recover_block_panic_pattern_match.snap
---
source: tests/spec/emit/recover.rs
description: |
  
  fn test() -> string {
    let result = recover { panic("oh no!") };
    match result {
      Ok(_) => "ok",
      Err(pv) => "caught panic",
    }
  }
---
package main

import lisette "github.com/ivov/lisette/prelude"

func test() string {
	result := lisette.RecoverBlock(func() struct{} {
		panic("oh no!")
	})
	if result.Tag == lisette.ResultOk {
		return "ok"
	}
	return "caught panic"
}
