tests/spec/emit/snapshots/recover_block_panic_tail_result_context.snap
---
source: tests/spec/emit/result_option_patterns.rs
description: |
  
  fn test() -> Result<int, PanicValue> {
    recover { panic("fatal") }
  }
---
package main

import lisette "github.com/ivov/lisette/prelude"

func test() lisette.Result[int, lisette.PanicValue] {
	recoverResult := lisette.RecoverBlock(func() int {
		panic("fatal")
	})
	return recoverResult
}
