tests/spec/emit/snapshots/recover_block_result_temp_var_no_collision.snap
---
source: tests/spec/emit/recover.rs
description: |
  
  fn main() {
    let result = recover { 1 };
    let recoverResult_1 = 7;
    let _ = recoverResult_1;
    let _ = result;
  }
---
package main

import lisette "github.com/ivov/lisette/prelude"

func main() {
	result := lisette.RecoverBlock(func() int {
		return 1
	})
	_ = result
}
