tests/spec/emit/snapshots/recover_block_string_result.snap
---
source: tests/spec/emit/recover.rs
description: |
  
  fn test() {
    let result = recover { "hello" };
  }
---
package main

import lisette "github.com/ivov/lisette/prelude"

func test() {
	recoverResult := lisette.RecoverBlock(func() string {
		return "hello"
	})
	_ = recoverResult
}
