tests/spec/emit/snapshots/recover_block_trailing_while.snap
---
source: tests/spec/emit/result_option_patterns.rs
description: |
  
  fn test() -> Result<(), PanicValue> {
    recover {
      while true {
        break
      }
    }
  }
---
package main

import lisette "github.com/ivov/lisette/prelude"

func test() lisette.Result[struct{}, lisette.PanicValue] {
	recoverResult := lisette.RecoverBlock(func() struct{} {
		for {
			break
		}
		return struct{}{}
	})
	return recoverResult
}
