tests/spec/emit/snapshots/recover_block_unit_ok_binding.snap
---
source: tests/spec/emit/recover.rs
description: |
  
  fn test() {
    let result = recover { panic("boom") };
    match result {
      Ok(v) => v,
      Err(_) => {},
    }
  }
---
package main

import lisette "github.com/ivov/lisette/prelude"

func test() {
	result := lisette.RecoverBlock(func() struct{} {
		panic("boom")
	})
	if result.Tag == lisette.ResultOk {
	}
}
