tests/spec/emit/snapshots/recover_block_void_last_expression.snap
---
source: tests/spec/emit/recover.rs
description: |
  
  fn risky() {
    panic("oops");
  }
  
  fn test() {
    let result = recover { risky() };
  }
---
package main

import lisette "github.com/ivov/lisette/prelude"

func risky() {
	panic("oops")
}

func test() {
	recoverResult := lisette.RecoverBlock(func() struct{} {
		risky()
		return struct{}{}
	})
	_ = recoverResult
}
