tests/spec/emit/snapshots/recover_block_with_direct_panic.snap
---
source: tests/spec/emit/recover.rs
description: |
  
  fn test() {
    let result = recover { panic("oh no!") };
  }
---
package main

import lisette "github.com/ivov/lisette/prelude"

func test() {
	recoverResult := lisette.RecoverBlock(func() struct{} {
		panic("oh no!")
	})
	_ = recoverResult
}
